--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+/*---------------------------BODY */
 body{
     width: 100%;
     background: #0c111b;
@@ -89,6 +89,7 @@ body{
     text-decoration: none;
 }
 
+/*-------------------- CAROUSEL*/
 .carousel-container{
     position: relative;
     width: 100%;
